[package]
name = "studyreps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# tokio and sqlx - Rust and Postgres
[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = {version = "0.6", features = ["postgres", "runtime-tokio-rustls"]}
dotenv = "0.15.0"